Continue creating order (null at customer, goodsCategory, orderStatus, orderCategory when creating)

--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
@@ -109,18 +109,18 @@
 				                </tr>
 				                <tr>
 				                    <td>SDT:</td>
-				                    <td><input type="text" class="input-container" placeholder="(+84) 1234567890" /></td>
+				                    <td><input type="text" class="input-container" id= "orderReceiverPhoneCreate" placeholder="(+84) 1234567890" readonly /></td>
 				                </tr>
 				                <tr>
 				                    <td>Email:</td>
-				                    <td><input type="email" class="input-container" /></td>
+				                    <td><input type="email" class="input-container" id= "orderReceiverEmailCreate" readonly /></td>
 				                </tr>
 				            </table>
 				        </fieldset>
 				</div>
 		</div>
 	        
-	        <!-- <div class="row2">
+	        <div class="row2">
 	        	<div class="form-row">
 				        <div class="form-group col-md-6">
 				            <label for="goodsType">Yêu cầu</label>
@@ -131,11 +131,11 @@
 				        <div class="form-group col-md-6">
 				            <label for="transportMethod">Địa chỉ</label>
 				            <div data-mdb-input-init class="form-outline">
-								<textarea class="form-control" id="textAreaExample2" rows="8" ></textarea>
+								<textarea class="form-control" id="orderAddressCreate" rows="8" ></textarea>
 							</div>
 				        </div>
 				    </div>
-	        </div> -->
+	        </div>
 	
 	        <div class="row3">
 				<legend class="legent-row3">Tự động cập nhật qua các kênh</legend>
@@ -147,7 +147,7 @@
 			</div>
 		        
 			<div class="row4">
-				<!-- <button type="button" id="saveOrderButton">Lưu</button> -->
+				<button type="button" id="createOrderButton">Lưu</button>
 	        	<button type="button" onclick="closeModal()">Trở về</button>
 			</div>
 	    </form>
