--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
@@ -106,6 +106,7 @@
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/createOrder.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatuses_Datatable.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/getCurrentDate_Handsontable.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadSender-Receiver_Inform.js}"></script>
 	
    
 </body>
