--- a/web/src/main/webapp/resources/css/order.css
+++ b/web/src/main/webapp/resources/css/order.css
@@ -35,6 +35,7 @@ fieldset.text-left.delidate-option{
 input.custom-checkbox {
     color: black;
     background-color: #c8c8fb;
+    margin-right: 10px;
 }
 
 fieldset.text-left.startdate-option,
@@ -245,7 +246,8 @@ button.closeBtn {
 }
 
 .checkbox-spacing {
-    margin-right: 8px; 
+    margin-bottom: 8px; 
+    gap: 10px; 
 }
 
 :root.sakaiUserTheme-dark .table {
@@ -258,3 +260,8 @@ button.closeBtn {
 input[type="search"] {
     color: black;
 }
+
+h3#orderIdForUpdate {
+    display: block;
+}
+
