--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -9,7 +9,7 @@
                 <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-user-following"></i><span data-i18n="nav.dash.main">Customer</span></a>
                 <ul class="dropdown-menu">
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">New (Kỳ)</a></li>
-                  <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">List (Vinh)</a></li> 
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer-list-vinh}" data-toggle="dropdown">List (Vinh)</a></li> 
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Search</a></li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Care</a></li>
                 </ul>
