Tích hợp phần "Thêm khách hàng mới" vào thanh menu nằm ngang

--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
@@ -34,7 +34,7 @@
 							
 							<!-- Thay đổi nút Thêm khách hàng -->
 							<button class="addCustomerbtn"
-								onclick="window.location.href='/crm-web/add-customer'">
+								onclick="window.location.href='/crm-web/add-customer-dan'">
 								<i class="fa-solid fa-plus"></i> Thêm mới khách hàng
 							</button>
 
