Chuyển màn hình danh sách Đơn hàng từ giao diện cũ (leftNav) sang giao diện mới (menu hàng ngang) Mục đích là để thử nghiệm sản phẩm chạy trong platform. link để chạy: http://localhost:8080/crm-web/main . Vào menu Order > Show Order (Khanh)

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -17,6 +17,8 @@
             <li class="dropdown nav-item" data-menu="dropdown">
                 <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-docs"></i><span data-i18n="nav.dash.main">Order</span></a>
                 <ul class="dropdown-menu">
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/ordersConfigurationCRMScreen_Khanh/orders}" data-toggle="dropdown">Show Order (Khanh)</a>
+                  </li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">New</a>
                   </li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Search</a>
