--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -32,18 +32,22 @@
                 <ul class="dropdown-menu">
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Order configuration</a>
                   </li>
-                  <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">General</a>
-                  </li>
+                  <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">General</a></li>
                 </ul>
             </li>
-            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">Settings</span></a>
+            <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">Reports</span></a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown dropdown-submenu" data-menu="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown">Order</a>
+                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Customer</a></li>
+                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Order</a></li>
+                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Task</a></li>
+                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Project</a></li>
+                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Product</a></li>
+                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Contract</a></li>
+                   <li class="dropdown dropdown-submenu" data-menu="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown">MKT</a>
                     <ul class="dropdown-menu">
-                      <li data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Order types</a>
-                      </li>
-                      <li data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Order status</a>
-                      </li>
+                      <li data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Chiến dịch</a></li>
+                      <li data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Affiliate</a></li>
+                      <li data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Telesales</a></li>
                      </ul>
                    </li>
                 </ul>
