Chuyển chức năng nhập mới đơn hàng từ giao diện cũ sang giao diện mới (Menu hàng ngang)

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -19,7 +19,7 @@
                 <ul class="dropdown-menu">
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/ordersConfigurationCRMScreen_Khanh/orders}" data-toggle="dropdown">Show Order (Khanh)</a>
                   </li>
-                  <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">New</a>
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/NewOrder}" data-toggle="dropdown">New (Than)</a>
                   </li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Search</a>
                   </li>
