--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
@@ -109,6 +109,7 @@
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadSender-Receiver_Inform_Create.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadSender-Receiver_Inform_Update.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadSender-Receiver_Inform_Detail.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/searchOrders.js}"></script>
 	
    
 </body>
