--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CRM Intro</title>
-<!-- Bootstrap CSS -->
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-	rel="stylesheet">
-<!-- Custom CSS -->
-<link
-	href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-	rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CRM Intro</title>
+    <th:block th:include="fragments/common_meta_title"></th:block>
+    <th:block th:include="fragments/head"></th:block>
+    <th:block th:include="fragments/common_css"></th:block>
+    <style>
+    .carousel-control-prev, .carousel-control-next {
+        width: 30px; /* Chiều rộng khung mũi tên */
+        height: 30px; /* Chiều cao khung mũi tên */
+    }
+    
+    .carousel-control-prev-icon, .carousel-control-next-icon {
+        width: 15px; /* Chiều rộng biểu tượng mũi tên */
+        height: 15px; /* Chiều cao biểu tượng mũi tên */
+    }
+    </style>
 </head>
 <body>
+    <th:block th:include="fragments/hmenu"></th:block>
 	<!-- Header Section -->
 	<header
 		class="text-center bg-success text-white py-5 card-header text-white">
@@ -88,17 +94,7 @@
 				<span class="carousel-control-next-icon text-white"
 					aria-hidden="true"></span> <span class="visually-hidden text-white">Next</span>
 			</button>
-			<style>
-.carousel-control-prev, .carousel-control-next {
-	width: 30px; /* Chiều rộng khung mũi tên */
-	height: 30px; /* Chiều cao khung mũi tên */
-}
 
-.carousel-control-prev-icon, .carousel-control-next-icon {
-	width: 15px; /* Chiều rộng biểu tượng mũi tên */
-	height: 15px; /* Chiều cao biểu tượng mũi tên */
-}
-</style>
 		</div>
 	</section>
 	<!-- New Section After Thumbnail Carousel -->
@@ -212,13 +208,6 @@
 			<p class="mt-3">&copy; 2024 TEAM CRM.</p>
 		</div>
 	</footer>
-	<!-- Bootstrap JS -->
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 </body>
+<th:block th:include="fragments/common_javascript"></th:block>
 </html>
