Xem lịch sử cập nhật, đi thừ menu ra

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -26,6 +26,8 @@
                   </li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Update status</a>
                   </li>
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/HistoryUpdate}" data-toggle="dropdown">History Update(Di)</a>
+                  </li>
                 </ul>
             </li>
             <li class="dropdown nav-item" data-menu="dropdown">
