Change UI for Module Order from vertical menu to horizontal menu and update ordersContentWrapperCRM.html for better look.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
@@ -10,7 +10,7 @@
 			<div class="content-header-left col-md-6 col-12 mb-2">
 				 <h3 class="content-header-title">Quản lý trạng thái đơn hàng</h3>
 				 <div class="row">
-				 	<div class="heading-elements">
+				 	<div class="heading-elements" style="display: flex;">
 				 		<a th:href="@{/orders}">
                         	<button class="btn btn-primary btn-sm order" fdprocessedid="fzh15n"><i class="fas fa-box-open white"></i> Đơn hàng_Handsontable</button>
             			</a>
