--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -10,7 +10,7 @@
                 <ul class="dropdown-menu">
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">New (Kỳ)</a></li>
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer-list-vinh}" data-toggle="dropdown">List (Vinh)</a></li>
-                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{customer-khoa}" data-toggle="dropdown">Interaction (Khoa)</a></li>  
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/customer-khoa}" data-toggle="dropdown">Interaction (Khoa)</a></li>  
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Search</a></li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Care</a></li>
                 </ul>
