--- a/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen.html
@@ -32,12 +32,13 @@
 	data-col="2-columns">
 
 	<!-- BEGIN HEADER -->
-	<th:block th:include="fragments/headerCRM"></th:block>
+	<!-- <th:block th:include="fragments/headerCRM"></th:block> -->
+	<th:block th:include="fragments/hmenu"></th:block>
 	<!-- END HEADER -->
 	
 
 	<!-- BEGIN LEFT MENU NAVIGATION -->
-	<th:block th:include="fragments/leftNavCRM"></th:block>
+	<!-- <th:block th:include="fragments/leftNavCRM"></th:block> -->
 	<!-- END LEFT MENU NAVIGATION -->
 
 	<!--  BEGIN CONTENT -->
