hien thi bang cac trang thai khi nhan vao order configuration

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -30,7 +30,7 @@
             <li class="dropdown nav-item" data-menu="dropdown">
                 <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-settings"></i><span data-i18n="nav.dash.main">Settings</span></a>
                 <ul class="dropdown-menu">
-                  <li class="active" data-menu=""><a class="dropdown-item" href="@{/orders-configuration-ky/status}" data-toggle="dropdown">Order configuration</a>
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/orders-configuration-ky/status}" data-toggle="dropdown">Order configuration</a>
                   </li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">General</a></li>
                 </ul>
