Update Seach Order version 4.

--- a/web/src/main/webapp/resources/css/order.css
+++ b/web/src/main/webapp/resources/css/order.css
@@ -275,3 +275,7 @@ h3#orderIdForUpdate {
     margin-right: 5px;
 }
 
+button.btn.btn-success.updateOrderStatusSearch-btn {
+    margin-left: 5px;
+}
+
