--- a/web/src/main/webapp/WEB-INF/templates/fragments/searchCondition_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/searchCondition_Datatable.html
@@ -22,6 +22,7 @@
 	                           <fieldset class="text-left customer-option">
 	                               <h5>Khách hàng</h5>
 	                               <select class="form-control" id="orderCustomerFilter" style="background-color: white; color: black;">
+	                               		<option value="" selected>-- Chọn khách hàng --</option>
 	                               		<th:block th:each="customer : ${listCustomers}">
 											<option th:value="${customer.id}" th:text="${customer.contactPerson}">
 											</option>
@@ -31,6 +32,7 @@
 	                           <fieldset class="text-left ordercate-option">
 	                               <h5>Loại đơn hàng</h5>
 	                               <select class="form-control" id="orderCategoryFilter" style="background-color: white; color: black;" >
+						            	<option value="" selected>-- Chọn loại đơn hàng --</option>
 						            	<th:block th:each="orderCategory : ${orderCategories}">
 								            <option th:value="${orderCategory.id}" th:text="${orderCategory.name}"></option>
 								        </th:block>
