--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -32,21 +32,15 @@
             </li>
             <li class="dropdown nav-item" data-menu="dropdown">
                 <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-settings"></i><span data-i18n="nav.dash.main">Settings</span></a>
-                <ul class="dropdown-menu">
-<<<<<<< HEAD
-                  <li class="active" data-menu=""><a class="dropdown-item" th:href="#" data-toggle="dropdown">Order configuration</a>
-                  </li>
-                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/orders-configuration-ky/status}" data-toggle="dropdown">General</a></li>
-=======
+                                <ul class="dropdown-menu">
                		<li class="dropdown dropdown-submenu" data-menu="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown">Order configuration</a>
                   		<ul class="dropdown-menu">
 		                  	<li data-menu=""><a class="dropdown-item" th:href="@{/ordersConfigurationCRMOrderType_Bao/orders}" data-toggle="dropdown">Order Type (Bao)</a></li>
-		                  	<li data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Order Status</a></li>
+		                  	<li data-menu=""><a class="dropdown-item" th:href="@{/orders-configuration-ky/status}" data-toggle="dropdown">Order Status</a></li>
                   		</ul>
                   	</li> 
                  
                   	<li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">General</a></li>
->>>>>>> remotes/origin/develop
                 </ul>
             </li>
             <li class="dropdown nav-item" data-menu="dropdown"><a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-note"></i><span data-i18n="nav.templates.main">Reports</span></a>
