Them thanh ngang

--- a/web/src/main/webapp/WEB-INF/templates/ordersConfiguration-StatusCRMScreen_ky.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersConfiguration-StatusCRMScreen_ky.html
@@ -29,7 +29,10 @@
 	data-open="click" data-menu="vertical-compact-menu"
 	data-col="2-columns">
 
-		
+		<!-- BEGIN HEADER -->
+	<!-- <th:block th:include="fragments/headerCRM"></th:block> Thanh nav cũ -->
+	<th:block th:include="fragments/hmenu"></th:block>
+	<!-- END HEADER -->	
 	
 	<div class="row">
 		 <div class="col-12">
