--- a/web/src/main/webapp/WEB-INF/templates/addCustomer_dan.html
+++ b/web/src/main/webapp/WEB-INF/templates/addCustomer_dan.html
@@ -37,14 +37,14 @@
 	<!-- END COMMON JAVASCRIPT -->
 	
 	<!-- FILE JS BỔ SUNG -->
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/addCustomer.js}" ></script>
 	<script type="text/javascript" src="resources/app-assets/js/update/navigate.js"></script>
 
 	<script type="text/javascript">
-		function addCustomer() {
+		/* function addCustomer(event) {
 			const createdAt = new Date().toISOString();
-			document.getElementById("addCustomerForm").created_at = createdAt;
-		}
-		
+			document.getElementById("addNewCustomerForm").created_at = createdAt;
+		}  */
 		function goBack() {
 	        window.location.href = '/crm-web/customer-list';
 	    }
