Refactor source code of Mr.Khanh Update menu Menu Orders > List

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -18,7 +18,7 @@
             <li class="dropdown nav-item" data-menu="dropdown">
                 <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-docs"></i><span data-i18n="nav.dash.main">Order</span></a>
                 <ul class="dropdown-menu">
-                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/ordersConfigurationCRMScreen_Khanh/orders}" data-toggle="dropdown">Show Order (Khanh)</a>
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/orders/list}" data-toggle="dropdown">List</a>
                   </li>
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/NewOrder}" data-toggle="dropdown">New (Than)</a>
                   </li>
