--- a/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen_v2.html
@@ -48,18 +48,18 @@
 		<th:block th:include="@{fragments/ordersContentWrapperCRM}"></th:block>
 		<!-- END CONTENT WRAPPER -->
 		
-	<div class="row">
+	<!-- <div class="row">
 	    <div th:replace="~{fragments/horizontalHeader :: header}">Header</div>
-	</div>
+	</div> -->
 	
-	<div class="row">
+	<!-- <div class="row">
 		 <div class="col-12">
 		 	<div class="order-screen">
 				<h4 class="title order-title">Cấu hình đơn hàng</h4>
 				<th:block th:include="fragments/orders-configuration/frg_orders-configuration.html"></th:block>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	</div>
 	
