Refactor source code of Di. Update menu Orders > History.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -26,7 +26,7 @@
                   </li>
                   <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Update status</a>
                   </li>
-                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/HistoryUpdate}" data-toggle="dropdown">History Update(Di)</a>
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/orders/history}" data-toggle="dropdown">History</a>
                   </li>
                 </ul>
             </li>
