Refactor source code of Than. Update menu Orders > New.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal_v2.html
@@ -8,9 +8,9 @@
 	<th:block th:include="fragments/common_css"></th:block>
 	<!-- END COMMON CSS -->
 	
-	<link rel="stylesheet" type="text/css" th:href="@{resources/css/ordersBtnHorizontalMenu.css}">	
-	<link rel="stylesheet" type="text/css" th:href="@{resources/css/new_style.css}">
-	<link rel="stylesheet" type="text/css" th:href="@{resources/css/order.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/css/ordersBtnHorizontalMenu.css}">	
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/resources/css/order.css}">
 	<th:block th:include="fragments/common_meta_title"></th:block>
 <!-- END COMMON META AND TITLE -->
 	<th:block th:include="fragments/common_meta_title"></th:block>
@@ -20,9 +20,9 @@
 <th:block th:include="fragments/common_css"></th:block>
 <!-- END COMMON CSS -->
 
-<link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
-<link rel="stylesheet" type="text/css" href="resources/css/status.css">
-<link rel="stylesheet" type="text/css" href="resources/css/buttonGroupFunction.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/status.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
 </head>
 </head>
 <style>
