--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -31,7 +31,7 @@
             <li class="dropdown nav-item" data-menu="dropdown">
                 <a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown"><i class="icon-settings"></i><span data-i18n="nav.dash.main">Settings</span></a>
                    <ul class="dropdown-menu">
-                      <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/orders-configuration-ky/status}" data-toggle="dropdown">Order configuration</a></li>
+                      <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Order configuration</a></li>
                       <li data-menu=""><a class="dropdown-item" th:href="@{/ordersConfigurationCRMOrderType_Bao/orders}" data-toggle="dropdown">Order Type (Bao)</a></li>
                       <li data-menu=""><a class="dropdown-item" th:href="@{/orders-configuration-ky/status}" data-toggle="dropdown">Order Status</a></li>
                       <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">General</a></li>
