Sửa tạm màn hình "Edit" interaction của Khoa.

--- a/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
@@ -62,7 +62,7 @@
 										id="dropdownMenuButton" data-toggle="dropdown"
 										 aria-expanded="false">Action</button>
 									<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-										<a class="dropdown-item" th:href="@{customerEdit(id=${customer.id})}">Cập nhật</a> 
+										<a class="dropdown-item" th:href="@{/customer/edit(id=${customer.id})}">Cập nhật</a> 
 										<a class="dropdown-item" href="#">Xóa</a> 
 									</div>
 								</div>
