--- a/web/src/main/webapp/WEB-INF/templates/editCustomerStatus_khoa.html
+++ b/web/src/main/webapp/WEB-INF/templates/editCustomerStatus_khoa.html
@@ -11,9 +11,9 @@
 
 <th:block th:include="fragments/head"></th:block>
 
-<link rel="stylesheet" type="text/css" href="resources/css/editStatusCustomer.css">
-<link rel="stylesheet" type="text/css" href="resources/css/new_style.css">
-<link rel="stylesheet" type="text/css" href="resources/css/customerDetail.css">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/editStatusCustomer.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/customerDetail.css}">
 </head>
 </head>
 <body
