--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -24,7 +24,7 @@
                   </li>
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/orders-datatable-thien}" data-toggle="dropdown">Search</a>
                   </li>
-                  <li class="active" data-menu=""><a class="dropdown-item" href="#" data-toggle="dropdown">Update status</a>
+                  <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/ordersConfigurationCRMStatus_Toan/status}" data-toggle="dropdown">Update status (Toan)</a>
                   </li>
                   <li class="active" data-menu=""><a class="dropdown-item" th:href="@{/HistoryUpdate}" data-toggle="dropdown">History Update(Di)</a>
                   </li>
