--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomer.html
@@ -12,7 +12,7 @@
 						</div>
 						<div class="card-content">
 							<div class="card-body">
-								<form id="addNewCustomerForm">
+								<form id="addCustomerForm">
 									<div class="form-group">
 										<label for="company_name">Tên Công Ty:</label> <input
 											type="text" class="form-control" id="company_name"
@@ -88,7 +88,7 @@
 									<!-- <button type="submit" class="btn btn-primary"
 										onclick="addCustomer()">Lưu Khách Hàng</button> -->
 										
-									<button type="submit" class="btn btn-primary"
+									<button type="submit" class="btn btn-primary" id="addNewCustomerForm"
 										>Lưu Khách Hàng</button>
 
 									<button type="button" class="btn btn-secondary"
