Code UI for form Cập nhật trạng thái đơn hàng (click btn Cập nhật trạng thái)

--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
@@ -80,6 +80,10 @@
 		<!-- BEGIN ORDER DETAIL MODAL -->
 		<th:block th:include="fragments/orderDetailModal"></th:block>
 		<!-- END ORDER DETAIL MODAL -->
+		
+		<!-- BEGIN UPDATE ORDER STATUS MODAL -->
+		<th:block th:include="fragments/updateOrderStatusModal"></th:block>
+		<!-- END UPDATE ORDER STATUS MODAL -->
 				
 	</div>
 	<!-- END CONTENT -->
