Fix search by keyword and by statusId of Customer

--- a/web/src/main/webapp/WEB-INF/templates/fragments/contentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/contentWrapperCRM.html
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="content-header-right col-md-6 col-12">
-				<form id="frmSearchCustomer" action="customer-list" method="get">
+				<form id="frmSearchCustomer" action="list" method="get">
 					<fieldset
 						class="form-group relative has-icon-left col-md-5 col-12 float-right p-0">
 						<input class="form-control" name="keyword" id="iconLeft"
