--- a/web/src/main/webapp/WEB-INF/templates/fragments/statusOfCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/statusOfCustomer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div class="cover">
-		<form id="frmScrollImages" action="customer-list" method="get"
+		<form id="frmScrollImages" action="list" method="get"
 			name="scrollForm">
 			
 			<div class="child all-customers-btn" onclick="showAllCustomers()">
